fixed spacing in footer and some other minor style modifications

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,6 +517,7 @@ footer {
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    text-shadow: none;
 }
 
 .cta-button--small {
